# india-findata

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: PLAN.md  __init__.py
api/routes/: __init__.py  analytics.py  banking.py  macro.py  markets.py  pipeline_routes.py
docs/: architecture.md  build-log.md  changelog.md  concepts.md  roadmap.md  sources.md  tutorial.md
infra/: prometheus.yml
infra/terraform/: main.tf  spot.tf  terraform.tfvars.example  user_data.sh
pipeline/: PLAN.md  __init__.py  config.py  main.py  scheduler.py
pipeline/schema/: __init__.py  record.py  validators.py
pipeline/sources/: __init__.py  base.py  bse.py  data_gov_in.py  mospi.py  mospi_mcp.py  nse.py  rbi.py  sebi.py
pipeline/store/: __init__.py  clickhouse.py  postgres.py
scripts/: PLAN.md  __init__.py  backfill.py  migrate.sql  seed.sh
tests/: __init__.py  test_analytics.py  test_bse.py  test_data_gov_in.py  test_mospi.py  test_mospi_mcp.py  test_nse.py  test_rbi.py  test_sebi.py
tests/fixtures/: bse_bhavcopy_sample.csv  fii_dii_sample.csv  mcp_cpi_response.txt  mcp_gdp_growth_response.txt  mcp_gdp_response.txt  mcp_iip_response.txt  mcp_wpi_response.txt  mospi_cpi_response.json  mospi_gdp_response.json  nse_bhavcopy_sample.csv  rbi_m3_sample.xlsx  rbi_rates_response.json  rbi_unknown_layout.xlsx  rbi_wss_sample.xlsx
web/: Dockerfile  PLAN.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  vite-env.d.ts
web/src/api/: client.ts  hooks.ts
web/src/components/: BankingPanel.css  BankingPanel.tsx  CorrCoeff.tsx  CorrelationPanel.css  CorrelationPanel.tsx  DateRangePicker.css  DateRangePicker.tsx  Layout.css  Layout.tsx  MacroPanel.css  MacroPanel.tsx  MarketsPanel.css  MarketsPanel.tsx  PipelinePanel.css  PipelinePanel.tsx  SeriesSelector.tsx  TopMoversTable.css  TopMoversTable.tsx
web/src/components/charts/: CPIChart.tsx  ChartWrapper.tsx  CreditGrowthChart.tsx  DualAxisChart.tsx  FIIDIIChart.tsx  ForexReservesChart.tsx  GDPChart.tsx  IIPChart.tsx  IndexChart.tsx  M3Chart.tsx  NPAChart.tsx  RepoRateChart.tsx  SectorHeatmap.tsx  charts.css
web/src/styles/: app.css  global.css
