[project]
name = "india-findata"
version = "0.1.0"
description = "Batch pipeline and analytics dashboard for Indian financial and economic data"
requires-python = ">=3.12"
dependencies = [
    # Web framework + scheduling
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "apscheduler>=3.10.4",

    # HTTP client (used by all scrapers)
    "httpx>=0.27.0",

    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Storage drivers
    "clickhouse-connect>=0.7.18",   # pure Python ClickHouse client
    "asyncpg>=0.29.0",              # async Postgres for FastAPI
    "psycopg2-binary>=2.9.9",       # sync Postgres for APScheduler jobs

    # Data extraction
    "openpyxl>=3.1.2",              # Excel (.xlsx) parsing for RBI DBIE
    "beautifulsoup4>=4.12.3",       # HTML table parsing
    "lxml>=5.2.1",                  # fast HTML/XML parser (bs4 backend)

    # Logging
    "structlog>=24.1.0",

    # Observability
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "httpx[mock]>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The importable packages live in pipeline/, api/, and scripts/ rather than a
# single dir matching the project name (india_findata).  Hatchling's default
# heuristic can't find them, so we list them explicitly — without this,
# `uv sync` / `uv run` (and any wheel build) fails with
# "Unable to determine which files to ship inside the wheel".
[tool.hatch.build.targets.wheel]
packages = ["pipeline", "api", "scripts"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Query()/Depends() defaults are the documented, intended pattern but
# trip B008 ("function call in default argument").  Treat them as immutable so
# B008 doesn't fire on every endpoint signature.
extend-immutable-calls = ["fastapi.Query", "fastapi.Depends", "fastapi.Path", "fastapi.Body"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
